# scraper-tools

./: .gitignore  README.md  devenv.nix  pyproject.toml
scraper_tools/: cookies.py  functools.py  playwright.py  proxy.py
tests/: test_functools.py  test_proxy.py
